# grpc_test

grpc_client/: client.py  hello_pb2.py  hello_pb2.pyi  hello_pb2_grpc.py  pyproject.toml  requirements.txt
grpc_server/: CMakeLists.txt  compile_commands.json
grpc_server/.cache/clangd/index/: server.cc.8975157DA6DB8C35.idx  server.cc.F1EDCCB829A64D82.idx
grpc_server/src/: server.cc
protos/: hello.proto
